# schema

./: .gitignore  .pre-commit-config.yaml  .travis.yml  BuildingSync.json  BuildingSync.xsd  BuildingSync_1_0.xsd  BuildingSync_2_0.xsd  CHANGELOG.md  Gemfile  LICENSE.md  README.md  Rakefile  circle.yml  pyproject.toml  ruff.toml
.github/: BuildingSync_Contribution_Proposal_v1.0_2017-04-10.doc  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
Java Files/: .project  ASHRAE 211 Form.xlsx  Frequent Commands for Java.docx  ashrae.xml  build.xml  ~$equent Commands for Java.docx  ~WRL0003.tmp
Java Files CTS/: .project  CTS Evaluation File.xlsx  build.xml
bsync_examples/: Small-Office-Level-1.ipynb
docs/: BuildingSync Data Dictionary 1.0.xlsx  DataDictionary.xlsx  developer_resources.md  enumerations.json  gbXML_reference.md  generate_data_dictionary.rb  linking_elements.md  release_instructions.md  versioning.md
docs/notebooks/: README.md  example-with-emissions.xml  example1-with-sensors.xml  pyproject.toml
docs/notebooks/bsync_examples/: Primary-School-Level1.md  Primary-School-Levels1-2.md  Primary-School-Levels1-3.md  PrimarySchool-Level1.xml  Reference-PrimarySchool-L100-Audit.xml  Reference-PrimarySchool-L200-Audit.xml  Small-Office-GHG.ipynb  Small-Office-Level-1.ipynb  Small-Office-Level-1.md  Small-Office-Level-2.md  example-level2.xml  example-smalloffice-level1.xml  example-smalloffice-level2.xml  example1.xml
examples/: ASHRAE 211 Export.xml  AT_BRICR_audit_report.xml  AT_example_AS_conversion_audit_report.xml  AT_example_NYC_audit_report_property.xml  AT_example_SF_audit_report.xml  AT_example_property_report_25.xml  AT_example_report_332.xml  BuildingEQ-1.0.0.xml  BuildingSync Website Invalid Schema.xml  BuildingSync Website Valid Schema.xml  CMS Woodlawn Campus.xml  CTSFacilityID22.xml  CTSFacilityID56.xml  CTSFacilityID69.xml  CTSFacilityID78.xml  Centers for Medicare and Medicaid (CMS) Woodlawn Campus  DC GSA Headquarters.xml  Example – A Valid Schema.xml  Example – Invalid Schema.xml  Golden Test File.xml  HighLevel.xml  LL87.xml  LL87_YearInstalledAndYearBurnerInstalled.xml  Multi-Facility Shared Systems.xml  Multi_building_gbxml_externalreference_geometry.xml  MultitenantBySubsections.xml  NIST Gaithersburg Campus  NIST Gaithersburg Campus.xml  Norfolk Federal Building  Norfolk Federal Building.xml  PrimarySchoolCRB1.xml  PrimarySchoolCRB1withCTS.xml  Reference Building - Primary School.xml  Reference Building - Primary Schoool.xml  (+6 more)
(+509 files in other folders)
