[tool.poetry]
name = "buildingsync-schema"
version = "0.2.0"
description = "Schema and examples for generating BuildingSync files from Python. This currently uses BuildingSync Version 2.7."
authors = ["corymosiman12 <cory.mosiman12@gmail.com>", "nllong <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.4.7"
lxml = "^4.9.1"
bsyncpy = {git = "https://github.com/BuildingSync/bsyncpy.git", branch="develop" }
eeweather = "^0.3.24"
jupytext = "^1.13.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
