[tool.poetry]
name = "bsync-examples"
version = "0.2.0"
description = "Examples for generating BuildingSync files from Python. This currently uses BuildingSync Version 2.4."
authors = ["corymosiman12 <cory.mosiman12@gmail.com>", "nllong <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.7.9"
jupyterlab = "^3.0.10"
bsyncpy = { git = "git@github.com:BuildingSync/bsyncpy.git", branch = "bender-updates" }
lxml = "^4.6.5"
eeweather = "^0.3.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
