[tool.poetry]
name = "bsync-examples"
version = "0.2.0"
description = "Examples for generating BuildingSync files from Python. This currently uses BuildingSync Version 2.5."
authors = ["corymosiman12 <cory.mosiman12@gmail.com>", "nllong <nicholas.long@nrel.gov>"]

[tool.poetry.dependencies]
python = "^3.7.9"
jupyterlab = "^3.6.8"
lxml = "^4.9.1"
bsyncpy = {git = "https://github.com/BuildingSync/bsyncpy.git", branch="develop" }
eeweather = "^0.3.24"
jupytext = "^1.13.8"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
